[project]
name = "sphere"
version = "0.1.0"
description = "A modern Python implementation of HAZUS flood methodology for building vulnerability and loss estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "NiyamIT, Inc." } ]
dependencies = [
    "geopandas>=1.1.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = ["libs/*"]


[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.7",
]
