[project]
name = "sphere-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Troy Schmidt", email = "tschmidt@niyamit.com" }
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sphere"]

[tool.uv]
package = true