[project]
name = "sphere-data"
version = "0.1.0"
description = "Data tables and lookup CSVs for sphere flood vulnerability"
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "MIT" }
authors = [
        { name = "Troy Schmidt", email = "tschmidt@niyamit.com" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/Niyam-Projects/sphere"
Repository = "https://github.com/Niyam-Projects/sphere"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sphere.data"]

[tool.hatch.build]
include = ["sphere/data/*.csv"]

[tool.uv]
package = true
