[project]
name = "sphere-flood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Troy Schmidt", email = "tschmidt@niaymit.com" }
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "numpy>=2.2.6",
    "rasterio>=1.4.3",
    "sphere-core",
    "sphere-data",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sphere"]

[tool.uv.sources]
sphere-core = { workspace = true }
sphere-data = { workspace = true }
